# murshop24-admin

./: Dockerfile  pyproject.toml  requirements.txt
murshop24_admin/: __init__.py  _settings.py  _telegram.py  _views.py
