[tool.poetry]
name = "murshop24-admin"
version = "0.1.0"
description = ""
authors = ["klim-neumann <klim.neumann@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.0"
gunicorn = "^21.2.0"
flask-admin = "^1.6.1"
pytz = "^2023.3.post1"
murshop24-models = {git = "https://github.com/klim-neumann/murshop24-models.git"}
httpx = "^0.25.1"
jinja2 = "^3.1.2"
flask-sqlalchemy = "^3.1.1"
psycopg = "^3.1.12"
pydantic-settings = "^2.0.3"
sqlalchemy = "^2.0.23"

[tool.poetry.group.dev.dependencies]
mypy = "^1.7.0"
flake8 = "^6.1.0"
flake8-bugbear = "^23.9.16"
black = "^23.11.0"
isort = "^5.12.0"
editorconfig-checker = "^2.7.3"
pre-commit = "^3.5.0"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
